Project: Fixed Trending Images overlap

--- a/public/project/client/css/style.css
+++ b/public/project/client/css/style.css
@@ -149,10 +149,11 @@ video {
 }
 
 .photos {
-    -webkit-column-count: 3;
-    -webkit-column-gap: 2px;
+    /*-webkit-column-count: 4; -webkit-column-gap:20px;*/
+    /*-moz-column-count:4; -moz-column-gap:20px;*/
+    /*-o-column-count:4; -o-column-gap:20px;*/
+    /*column-count:4; column-gap:20px;*/
 }
-
 
 .searchBoxTopMargin{
     margin-top: 9px;
